--- a/react_app/src/App.css
+++ b/react_app/src/App.css
@@ -5,4 +5,15 @@
   text-align: center;
 } */
 
+.medieval-font {
+  font-family: "MedievalSharp", cursive;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.metamorphous-font {
+  font-family: "Metamorphous", serif;
+  font-weight: 400;
+  font-style: normal;
+}
 
